--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <header>
         <h1>Testing</h1>
         <h2>Kampus Merdeka Batch 4 Altera Academy</h2>
+        <h3>Kelas React C</h3>
+        <h4>Jam 18.30-21.00</h4>
     </header>
 </body>
 </html>
