--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Testing</h1>
-        <h2>Kampus Merdeka Batch 4 Altera Academy</h2>
-        <h5>Ujicoba 123</h5>
-        <h3>Kelas React C</h3>
-        <h4>Jam 18.30-21.00</h4>
+        <h1> UJICOBA WORKFLOW<h1>
+            <h2>From Branch EL TO MASTER <h2>
     </header>
 </body>
 </html>
