--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h3>Halooo</h3>
         <div class="sapaan">
-            <h1> UJICOBA WORKFLOW<h1>
+            <a href="testbranch.html"><h1> UJICOBA WORKFLOW<h1></h1></a>
             <h2>From Branch EL TO MASTER <h2>
             <h3>Ini lanjutan dari branch El</h3>
             <h4>Berikut contoh yang telah saya buat</h4>
