--- a/last.html
+++ b/last.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ujicoba branch</title>
+    <title>Last</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Berikut halaman lain dari ujicoba branching</h1>
-    <h2>By: Rafael Fillah Firmansyah</h2>
-    <h3>Perubahan terakhir</h3>
+    <h1>Berikut adalah halaman terakhir</h1>
 </body>
 </html>
