--- a/last.html
+++ b/last.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Berikut adalah halaman terakhir</h1>
+    <b>Ujicoba sekali lagi</b>
+    <div>
+        <h1>Percobaan kesekian kali</h1>
+    </div>
 </body>
 </html>
