--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <h2>From Branch EL TO MASTER <h2>
             <h3>Ini lanjutan dari branch El</h3>
             <h4>Berikut contoh yang telah saya buat</h4>
+
+            <a href="main.php">Silahkan pindah kehalaman selanjutnya</a>
         </div>
     </header>
 </body>
