--- a/last.html
+++ b/last.html
@@ -10,6 +10,7 @@
 <body>
     <b>Ujicoba sekali lagi</b>
     <div>
+        <a href="main.php">Silahkan pindah kehalaman selanjutnya</a>
         <h1>Percobaan kesekian kali</h1>
     </div>
 </body>
