--- a/maen.html
+++ b/maen.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
-    <link rel="stylesheet" href="index.css">
+    <title>maen</title>
 </head>
 <body>
-    <h1>ini adalah halaman utama</h1>
-    <h3>kita coba</h3>
+    <h1>testing123</h1>
 </body>
 </html>
